--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "csswring": "^5.1.1",
     "postcss": "^5.2.11",
     "postcss-cssnext": "^2.9.0",
     "postcss-export-vars": "^0.2.0",
     "postcss-loader": "^1.2.2",
+    "postcss-nested": "^1.0.0",
     "postcss-smart-import": "^0.6.7",
     "pre": "^0.1.3",
+    "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0"
   },
